@@ -1,5 +1,6 @@
 package org.nico.ratel.landlords.server.robot;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,7 +14,7 @@ public interface RobotEventListener {
 	public final static Map<ClientEventCode, RobotEventListener> LISTENER_MAP = new HashMap<>();
 	
 	public void call(ClientSide robot, String data);
-	
+
 	public static RobotEventListener get(ClientEventCode code) {
 		RobotEventListener listener = null;
 		try {
@@ -22,7 +23,11 @@ public interface RobotEventListener {
 			}else{
 				String eventListener = LISTENER_PREFIX + code.name();
 				Class<RobotEventListener> listenerClass = (Class<RobotEventListener>) Class.forName(eventListener);
-				listener = listenerClass.newInstance();
+				try {
+					listener = listenerClass.getDeclaredConstructor().newInstance();
+				} catch (NoSuchMethodException | InvocationTargetException e) {
+					e.printStackTrace();
+				}
 				RobotEventListener.LISTENER_MAP.put(code, listener);
 			}
 			return listener;
